bundle/tests/scorecard/kuttl/network-policy/00-network-policy-enabled-default.yaml
apiVersion: liberty.websphere.ibm.com/v1
kind: WebSphereLibertyApplication
metadata:
  name: network-policy-rc
spec:
  license:
    accept: true
  applicationImage: registry.k8s.io/pause:3.2
  service:
    port: 8080
