bundle/tests/scorecard/kuttl/network-policy/02-grow-network-policy.yaml
apiVersion: liberty.websphere.ibm.com/v1
kind: WebSphereLibertyApplication
metadata:
  name: network-policy-rc
spec:
  license:
    accept: true
  applicationImage: k8s.gcr.io/pause:3.2
  expose: true
  service:
    port: 8080
    ports:
      - port: 9090
        protocol: TCP
      - port: 9091
        protocol: TCP
