bundle/tests/scorecard/kuttl/network-policy/04-unexposed-network-policy.yaml
apiVersion: liberty.websphere.ibm.com/v1
kind: WebSphereLibertyApplication
metadata:
  name: network-policy-rc
spec:
  license:
    accept: true
  applicationImage: k8s.gcr.io/pause:3.2
  expose: false
  service:
    port: 8081
