bundle/tests/scorecard/kuttl/network-policy/06-undef-network-labels-network-policy.yaml
apiVersion: liberty.websphere.ibm.com/v1
kind: WebSphereLibertyApplication
metadata:
  name: network-policy-rc
spec:
  license:
    accept: true
  applicationImage: k8s.gcr.io/pause:3.2
  expose: false
  networkPolicy:
    namespaceLabels:
    fromLabels:
      foo: bar
  service:
    port: 8080
    ports:
      - port: 9090
        protocol: TCP
