bundle/tests/scorecard/kuttl/network-policy/06-undef-network-policy.yaml
apiVersion: liberty.websphere.ibm.com/v1
kind: WebSphereLibertyApplication
metadata:
  name: network-policy-rc
spec:
  applicationImage: k8s.gcr.io/pause:2.0
  networkPolicy:
  service:
    ports: []
