bundle/tests/scorecard/kuttl/network-policy/07-undef-pod-labels-network-policy.yaml
apiVersion: liberty.websphere.ibm.com/v1
kind: WebSphereLibertyApplication
metadata:
  name: network-policy-rc
spec:
  license:
    accept: true
  applicationImage: registry.k8s.io/pause:3.2
  expose: false
  networkPolicy:
    fromLabels:
  service:
    port: 8080
    ports:
      - port: 9090
        protocol: TCP
