bundle/tests/scorecard/kuttl/network-policy/08-undef-network-policy.yaml
apiVersion: liberty.websphere.ibm.com/v1
kind: WebSphereLibertyApplication
metadata:
  name: network-policy-rc
spec:
  license:
    accept: true
  applicationImage: registry.k8s.io/pause:3.2
  networkPolicy:
  service:
    ports: []
