bundle/tests/scorecard/kuttl/network-policy/09-allow-all-pods-any-ns.yaml
apiVersion: liberty.websphere.ibm.com/v1
kind: WebSphereLibertyApplication
metadata:
  name: network-policy-rc
spec:
  license:
    accept: true
  applicationImage: registry.k8s.io/pause:3.2
  expose: false
  networkPolicy:
    namespaceLabels: {}
    fromLabels: {}
  service:
    port: 8080
