bundle/tests/scorecard/kuttl/network-policy/10-allow-labeled-pods-all-ns.yaml
apiVersion: liberty.websphere.ibm.com/v1
kind: WebSphereLibertyApplication
metadata:
  name: network-policy-rc
spec:
  license:
    accept: true
  applicationImage: registry.k8s.io/pause:3.2
  expose: false
  networkPolicy:
    namespaceLabels: {}
    fromLabels:
      foo: bar
  service:
    port: 8080
