bundle/tests/scorecard/kuttl/network-policy/11-allow-any-pod-same-ns.yaml
apiVersion: liberty.websphere.ibm.com/v1
kind: WebSphereLibertyApplication
metadata:
  name: network-policy-rc
spec:
  license:
    accept: true
  applicationImage: k8s.gcr.io/pause:3.2
  expose: false
  networkPolicy:
    namespaceLabels:
      namespace: test
    fromLabels: {}
  service:
    port: 8080
