bundle/tests/scorecard/kuttl/network-policy/12-disable-network-policy.yaml
apiVersion: liberty.websphere.ibm.com/v1
kind: WebSphereLibertyApplication
metadata:
  name: network-policy-rc
spec:
  license:
    accept: true
  applicationImage: registry.k8s.io/pause:3.2
  networkPolicy:
    disable: true
  service:
    port: 8081
