bundle/tests/scorecard/kuttl/network-policy/03-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 60
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-rc
spec:
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - port: 9080
          protocol: TCP
  podSelector:
    matchLabels:
      liberty.websphere.ibm.com/name: network-policy-rc
  policyTypes:
    - Ingress
