bundle/tests/scorecard/kuttl/network-policy/06-assert.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestAssert
timeout: 60
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-rc
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              foo: bar
        - namespaceSelector:
            matchLabels:
              network.openshift.io/policy-group: monitoring
      ports:
        - port: 8080
          protocol: TCP
        - port: 9090
          protocol: TCP
  podSelector:
    matchLabels:
      liberty.websphere.ibm.com/name: network-policy-rc
  policyTypes:
    - Ingress
