bundle/tests/scorecard/kuttl/network-policy/07-errors.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-rc
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              foo: bar
