bundle/tests/scorecard/kuttl/network-policy/09-assert.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-rc
spec:
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - port: 8080
          protocol: TCP
  podSelector:
    matchLabels:
      liberty.websphere.ibm.com/name: network-policy-rc
  policyTypes:
    - Ingress
